bundles/llmroute-vertex/23-vertexai-HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vertex-ai
  namespace: agentgateway-system
spec:
  parentRefs:
    - name: agw
      namespace: agentgateway-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /vertex
      backendRefs:
        - name: vertex-ai
          group: enterpriseagentgateway.solo.io
          kind: EnterpriseAgentgatewayBackend
      timeouts:
        request: "120s"
